discussion/kv_engine/128640/128640_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-21 12:05:29.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-21 12:44:36.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2335/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: unknown type name "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: unknown type name "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds)
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:65:1: error: expected function body after function declarator [clang-diagnostic-error]
STAT(ep_storage_age_highwat, microseconds)
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2335/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6:
error: unknown type name "ep_storage_age" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2335/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24173/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24173/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/851/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
